# livescan

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deployment/: prometheus.yml
deployment/k8s/: deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
docs/: live.md
scripts/: release_installer.env.example  release_installer.sh  train_offline.py
src/livescan/: __init__.py
tests/: test_api.py  test_sovereign_v10.py
v10-autonomous-ai/: README.md
v10-autonomous-ai/codex/: v10_prompt.txt
v11-agi/: README.md
v11-agi/admin/: App.tsx
v11-agi/agents/: swarm.py
v11-agi/codex/: v11.txt
v11-agi/core/: orchestrator.py  world.py
v11-agi/security/: jwt.py
v12-civilization-ai/: README.md
v12-civilization-ai/admin/: App.tsx
v12-civilization-ai/agents/: civilization.py
v12-civilization-ai/api/: app.py
v12-civilization-ai/codex/: v12.txt
v12-civilization-ai/core/: orchestrator.py  world_model.py
v12-civilization-ai/economy/: market.py  tokenomics.py
v12-civilization-ai/infra/: k8s.yaml
v12-civilization-ai/self_evolve/: codegen.py
v13-post-agi/: README.md
v13-post-agi/admin/: App.tsx
v13-post-agi/agents/: swarm.py
v13-post-agi/api/: app.py
v13-post-agi/codex/: v13_prompt.txt
v13-post-agi/core/: orchestrator.py  simulator.py  world_model.py
v13-post-agi/economy/: market.py  tokenomics.py
v13-post-agi/infra/: argocd.yaml  k8s.yaml  terraform.tf
v13-post-agi/observability/: metrics.py
v13-post-agi/security/: auth.py
v14-singularity/: README.md
v9-autonomous-ai/: README.md
(+95 files in other folders)
