[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livescan"
version = "0.1.0"
description = "Self-evolving temporal graph intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "torch>=2.4.0",
  "numpy>=1.26.0",
  "networkx>=3.3",
  "prometheus-client>=0.20.0",
  "aiokafka>=0.10.0",
  "python-json-logger>=2.0.7",
  "feast>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
